recursion.hanoi.lessons.recursion.hanoi.InterleavedHanoi.scala.error
InterleavedHanoi:15: error: ';' expected but ')' found.
	hanoi(height-1, src2, dst, src1))
                                        ^